[package]
name = "pamir-peace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
brownstone = "1.0.1"
enum-map = { version = "1.1.1", features = ["serde"] }
itertools = "0.10.1"
num = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
strum = { version = "0.23.0", features = ["derive"] }
thiserror = "1.0.30"
